# StartingEmbeddedDevTalk

./: Meetup Info.docx  Presentation.pptx  README.md
01-ArduinoIDE/: README.md
02-AtmelStudio/AtemlStudioGccApplication/: AtemlStudioGccApplication.atsln
02-AtmelStudio/AtemlStudioGccApplication/AtemlStudioGccApplication/: AtemlStudioGccApplication.componentinfo.xml  AtemlStudioGccApplication.cppproj  main.cpp
03-CMake/: CMakeLists.txt  CMakeSettings.json
03-CMake/App/AppLogic/include/: AppRunner.h
03-CMake/App/AppLogic/src/: AppRunner.cpp  AppSettings.cpp
03-CMake/DeviceUtils/include/: TransceiverUtils.h  TransceiverWrapper.h
03-CMake/DeviceUtils/src/: TransceiverUtils.cpp
03-CMake/Entities/include/: ReceivedData.h
03-CMake/MessageHandling/include/: BinarySerializableMessageUtils.h  DeviceType.h  MessageType.h
03-CMake/MessageHandling/include/Messages/Device/: DeviceBroadcastMessage.h
03-CMake/MessageHandling/src/: BinarySerializableMessageBase.cpp
03-CMake/Rfm69AvrWrapper/src/: Rfm69AvrController.cpp
03-CMake/Utilities/src/: UnsafeByteArraySlice.cpp
03-CMake/Utilities/test/: IntByteConversionUtilitiesTests.cpp
CMakeWithtests/App/AppDevice/src/: main.cpp
CMakeWithtests/App/AppLogic/include/: AppSettings.h
CMakeWithtests/AvrSpecific/: CustomAvrFunctions.cpp
CMakeWithtests/AvrSpecific/AdafruitTrinket/: TrinketBoardConstants.cpp
CMakeWithtests/DeviceUtils/include/: AvrTimeUtilFunctions.h
CMakeWithtests/DeviceUtils/src/: AvrTimeUtilFunctions.cpp  TransceiverWrapper.cpp
CMakeWithtests/Entities/src/: ReceivedData.cpp
CMakeWithtests/MessageHandling/include/: BinarySerializableMessageBase.h
CMakeWithtests/MessageHandling/src/: BinarySerializableMessageUtils.cpp
CMakeWithtests/MessageHandling/src/Messages/Device/: DeviceBroadcastMessage.cpp
CMakeWithtests/MessageHandling/test/: BinarySerializableMessageUtilsTests.cpp
CMakeWithtests/MessageHandling/test/Messages/Device/: devicebroadcastmessagetests.cpp
CMakeWithtests/Rfm69AvrWrapper/include/: Rfm69AvrController.h  Rfm69FrequenciesType.h
CMakeWithtests/Utilities/: External_GTest.cmake
CMakeWithtests/Utilities/include/: IntByteConversionUtilities.h  UnsafeByteArraySlice.h
CMakeWithtests/Utilities/src/: IntByteConversionUtilities.cpp
